--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ section
     height: 45vh;
     display: flex;
     flex-wrap: wrap;
-    padding: 0.5rem;
+    padding: 1.5rem;
     border-radius: 2rem;
 }
 
@@ -109,12 +109,21 @@ img{
     justify-content: space-around;
 }
 
-h2{
+
+
+h1,h2 {
     width: 100%;
     font-size: 1.6rem;
     text-align: center;
     margin-top: 0.5rem;
 }
+
+h1{
+    font-size: 3.5rem;
+    color: #242832cc;
+    text-decoration: underline double;
+}
+
 p{
     text-align: center;
     font-size: clamp(1rem, 1.3rem, 1.6rem);
@@ -136,13 +145,21 @@ input:focus{
 
 button
 {
-    height: 2.5rem;
-    width: clamp(5rem, 35%, 15rem);
-    font-size: 1rem;
+    height: 3.5rem;
+    width: 12rem;
+    font-size: 1.3rem;
     font-weight: 600;
-    padding: 0.1rem 1rem;
+    padding: 0.5rem 1rem;
     border-radius: 0.7rem;
     margin-bottom: 0.5rem;
+}
+
+.spruch{
+    width: 100%;
+    height: 10rem;
+    font-size: 1.6rem;
+    padding: 0.5rem;
+    text-align: center;
 }
 
 button:hover{
@@ -150,17 +167,17 @@ button:hover{
     color: #eee;
 }
 
-@media only screen and (max-width: 900px){
+@media only screen and (max-width: 1024px){
     .secTop{
         flex-direction: row;
         height: auto;
     }
     .changer{
-        width: 50%;
+        width: 45%;
     }
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 700px){
     .secTop{
         flex-direction: column;
         height: auto;
